working on floaty icons

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -541,3 +541,20 @@ html {
     padding: 3px 10px;
   }
 }
+
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-8px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animate-float {
+  animation: float 3s ease-in-out infinite;
+}
